made the blocks

--- a/index.html
+++ b/index.html
@@ -44,25 +44,25 @@
         <div class="col-lg-3">
           <div class="features-icons-item mx-auto mb-0 mb-lg-3">            
             <h4>DAILY REWARDS<br>(for 1 unit)</h4>
-            <p class="lead mb-0">This theme will look great on any device, no matter the size!</p>
+            <p class="lead mb-0" id="daily">loading...</p>
           </div>
         </div>
         <div class="col-lg-3">
           <div class="features-icons-item mx-auto mb-0 mb-lg-3">
             <h4>NUMBER of<br>FROZEN BOScoin</h4>
-            <p class="lead mb-0">Featuring the latest build of the new Bootstrap 4 framework!</p>
+            <p class="lead mb-0" id="n-frozen">loading...</p>
           </div>
         </div>
         <div class="col-lg-3">
           <div class="features-icons-item mx-auto mb-0 mb-lg-3">
             <h4>NUMBER of<br>FROZEN ACCOUNTS</h4>
-            <p class="lead mb-0">Ready to use with your own content, or customize the source files!</p>
+            <p class="lead mb-0" id="n-account">loading...</p>
           </div>
         </div>
        <div class="col-lg-3">
           <div class="features-icons-item mx-auto mb-0 mb-lg-3">
             <h4>NEXT REWARD DISTRIBUTION</h4>
-            <p class="lead mb-0">Ready to use with your own content, or customize the source files!</p>
+            <p class="lead mb-0" id="next-r">loading...</p>
           </div>
         </div>
 
