--- a/public/index.html
+++ b/public/index.html
@@ -136,7 +136,7 @@
                 <img src="copy.svg" alt="copy public key"
                 
                 id="copyClip"
-                data-toggle="tooltip" title="Copy BOS public key"
+                data-toggle="tooltip" title="Wanna buy us a coffee? Copy the Tip Jar Public Key"
               >
               </p>
               <div id="notification" style="position:fixed;
